--- a/css/BigWork1.css
+++ b/css/BigWork1.css
@@ -280,9 +280,11 @@ ul{
 }
 .zuo{
 	float: left;
+	cursor: pointer;
 }
 .you{
 	float: right;
+	cursor: pointer;
 }
 .tu2{
 	padding: 3px 5px 2px 5px;
