--- a/css/BigWork1.css
+++ b/css/BigWork1.css
@@ -266,8 +266,7 @@ ul{
 }
 .tutu{
 	width: 816px;
-	height: 408px;	
-	/*position: absolute;*/
+	height: 408px;
 	position: relative;	
 }
 .datu{
@@ -603,7 +602,8 @@ ul{
 	top:0;
 	background:#000;
 	opacity:0.7;
-	cursor: move;
+	/*cursor: move;*/
+	cursor: crosshair;
 	display:none; 
 	filter:alpha(opacity=40);
 }
